--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "author": "Vittorio Zaccaria",
   "license": "MIT",
+  "bin": {
+    "aos-sched": "./index.js"
+  },
   "dependencies": {
-    "caporal": "0.8.0",
+    "@caporal/core": "2.0.7",
     "easy-table": "1.1.1",
     "get-stdin": "5.0.1",
     "jest": "29.6.4",
