--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@caporal/core": "2.0.7",
     "easy-table": "1.1.1",
+    "eslint": "8.48.0",
     "get-stdin": "5.0.1",
     "jest": "29.6.4",
     "lodash": "4.17.4",
