--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@caporal/core": "2.0.7",
+    "@types/winston": "2.4.4",
     "easy-table": "1.1.1",
     "eslint": "8.48.0",
     "get-stdin": "5.0.1",
@@ -20,5 +21,8 @@
     "lodash": "4.17.4",
     "mz": "2.7.0",
     "replace-ext": "1.0.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.198"
   }
 }
