Add rule for generating example.png in makefile and update relevant files.
- Added a makefile rule to generate example.png using a series of commands
- Added "example.pdf" to the .gitignore file
- Changed the bin file in package.json from "index.js" to "index.ts"
- Added a new file, "example.png"
- Added a readme file with explanations and examples of CLI commands

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Vittorio Zaccaria",
   "license": "MIT",
   "bin": {
-    "aos-sched": "./index.js"
+    "aos-sched": "./index.ts"
   },
   "dependencies": {
     "@caporal/core": "2.0.7",
